Feature: Support average velocities, if not all three stripes are measured.

--- a/src/badweathermounttester/translations/de/LC_MESSAGES/messages.po
+++ b/src/badweathermounttester/translations/de/LC_MESSAGES/messages.po
@@ -580,3 +580,7 @@ msgstr "Simulation bereit - Start drücken"
 #: src/badweathermounttester/display.py
 msgid "Velocity not measured \u2014 using estimated rate"
 msgstr "Geschwindigkeit nicht gemessen \u2014 geschätzte Rate wird verwendet"
+
+#: src/badweathermounttester/display.py
+msgid "Velocity partially measured \u2014 using average"
+msgstr "Geschwindigkeit teilweise gemessen \u2014 Durchschnitt wird verwendet"
