--- a/src/badweathermounttester/translations/de/LC_MESSAGES/messages.po
+++ b/src/badweathermounttester/translations/de/LC_MESSAGES/messages.po
@@ -1,12 +1,14 @@
 # German translations for Bad Weather Mount Tester.
 # Copyright (C) 2026 Jens Scheidtmann
-# This file is distributed under the same license as the Bad Weather Mount Tester project.
+# This file is distributed under the same license as the Bad Weather Mount
+# Tester project.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: badweathermounttester 0.8.0\n"
-"Report-Msgid-Bugs-To: https://github.com/jscheidtmann/BadWeatherMountTester/issues\n"
-"POT-Creation-Date: 2026-02-21 15:34+0100\n"
+"Report-Msgid-Bugs-To: "
+"https://github.com/jscheidtmann/BadWeatherMountTester/issues\n"
+"POT-Creation-Date: 2026-02-22 10:39+0100\n"
 "PO-Revision-Date: 2026-02-21 00:00+0100\n"
 "Last-Translator: Jens Scheidtmann\n"
 "Language: de\n"
@@ -17,13 +19,62 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.18.0\n"
 
+#: src/badweathermounttester/display.py:661
+msgid "Press ESC to exit"
+msgstr "ESC drücken zum Beenden"
+
+#: src/badweathermounttester/display.py:886
+#, python-format
+msgid "Calibration - Points: %d"
+msgstr "Kalibrierung - Punkte: %d"
+
+#: src/badweathermounttester/display.py:894
+msgid "Move mouse on web UI to position crosshair, click to record point"
+msgstr ""
+"Maus im Web-UI bewegen zum Positionieren des Fadenkreuzes, klicken zum "
+"Aufzeichnen"
+
+#: src/badweathermounttester/display.py:952
+msgid "LEFT"
+msgstr "LINKS"
+
+#: src/badweathermounttester/display.py:953
+msgid "MIDDLE"
+msgstr "MITTE"
+
+#: src/badweathermounttester/display.py:954
+msgid "RIGHT"
+msgstr "RECHTS"
+
+#: src/badweathermounttester/display.py:1050
+msgid "Simulation Complete"
+msgstr "Simulation abgeschlossen"
+
+#: src/badweathermounttester/display.py:1058
+msgid "Running"
+msgstr "Läuft"
+
+#: src/badweathermounttester/display.py:1066
+msgid "Simulation Ready - Press Start"
+msgstr "Simulation bereit - Start drücken"
+
+#: src/badweathermounttester/display.py:1073
+#, fuzzy
+msgid "Velocity not measured — using estimated rate"
+msgstr "Geschwindigkeit nicht gemessen \\u2014 geschätzte Rate wird verwendet"
+
+#: src/badweathermounttester/display.py:1080
+#, fuzzy
+msgid "Velocity partially measured — using average"
+msgstr "Geschwindigkeit teilweise gemessen \\u2014 Durchschnitt wird verwendet"
+
 #: src/badweathermounttester/templates/index.html:6
 #: src/badweathermounttester/templates/index.html:761
 msgid "Bad Weather Mount Tester"
 msgstr "Bad Weather Mount Tester"
 
 #: src/badweathermounttester/templates/index.html:764
-#: src/badweathermounttester/templates/index.html:1151
+#: src/badweathermounttester/templates/index.html:1168
 msgid "Northern Hemisphere"
 msgstr "Nordhalbkugel"
 
@@ -61,7 +112,8 @@ msgid ""
 "geometry calculations for the simulated star movement."
 msgstr ""
 "Geben Sie den Breitengrad ein, für den Ihre Montierung konfiguriert ist. "
-"Dies beeinflusst die Geometrieberechnungen für die simulierte Sternbewegung."
+"Dies beeinflusst die Geometrieberechnungen für die simulierte "
+"Sternbewegung."
 
 #: src/badweathermounttester/templates/index.html:791
 msgid "Guide Scope Focal Length (mm)"
@@ -223,14 +275,18 @@ msgstr ""
 
 #: src/badweathermounttester/templates/index.html:869
 msgid "Focus and locate the cross on the simulator display, following the arrows."
-msgstr "Fokussieren Sie und suchen Sie das Kreuz auf dem Simulatordisplay, folgen Sie dabei den Pfeilen."
+msgstr ""
+"Fokussieren Sie und suchen Sie das Kreuz auf dem Simulatordisplay, folgen"
+" Sie dabei den Pfeilen."
 
 #: src/badweathermounttester/templates/index.html:871
 msgid "Then press \"Next\" to start aligning the mount."
-msgstr "Drücken Sie dann \"Weiter\", um mit der Ausrichtung der Montierung zu beginnen."
+msgstr ""
+"Drücken Sie dann \"Weiter\", um mit der Ausrichtung der Montierung zu "
+"beginnen."
 
 #: src/badweathermounttester/templates/index.html:879
-#: src/badweathermounttester/templates/index.html:1159
+#: src/badweathermounttester/templates/index.html:1176
 msgid ""
 "Using only rotations in RA, move the mount back and forth from left-hand-"
 "side to right-hand-side. Use the mount's Azimuth adjustment screws, so "
@@ -246,7 +302,9 @@ msgstr "Falls nötig, die Deklination leicht anpassen."
 
 #: src/badweathermounttester/templates/index.html:881
 msgid "Press \"Next\" when aligned, or \"Back\" to return to configuration."
-msgstr "Drücken Sie \"Weiter\", wenn ausgerichtet, oder \"Zurück\", um zur Konfiguration zurückzukehren."
+msgstr ""
+"Drücken Sie \"Weiter\", wenn ausgerichtet, oder \"Zurück\", um zur "
+"Konfiguration zurückzukehren."
 
 #: src/badweathermounttester/templates/index.html:890
 msgid ""
@@ -258,7 +316,9 @@ msgstr ""
 
 #: src/badweathermounttester/templates/index.html:891
 msgid "Click on the preview below at that location to record a point."
-msgstr "Klicken Sie in der Vorschau unten auf diese Position, um einen Punkt aufzuzeichnen."
+msgstr ""
+"Klicken Sie in der Vorschau unten auf diese Position, um einen Punkt "
+"aufzuzeichnen."
 
 #: src/badweathermounttester/templates/index.html:892
 msgid ""
@@ -270,7 +330,9 @@ msgstr ""
 
 #: src/badweathermounttester/templates/index.html:893
 msgid "Move the mount in RA a few pixels, then repeat steps 1-3."
-msgstr "Bewegen Sie die Montierung in RA um einige Pixel und wiederholen Sie die Schritte 1–3."
+msgstr ""
+"Bewegen Sie die Montierung in RA um einige Pixel und wiederholen Sie die "
+"Schritte 1–3."
 
 #: src/badweathermounttester/templates/index.html:894
 msgid "Continue until you have traced across the entire screen."
@@ -290,11 +352,15 @@ msgstr "Tastatur:"
 
 #: src/badweathermounttester/templates/index.html:897
 msgid "Arrows/S/E/D/F = move 1px | Q/PgUp = previous point | A/PgDn = next point"
-msgstr "Pfeile/S/E/D/F = 1px bewegen | Q/BildAuf = vorheriger Punkt | A/BildAb = nächster Punkt"
+msgstr ""
+"Pfeile/S/E/D/F = 1px bewegen | Q/BildAuf = vorheriger Punkt | A/BildAb = "
+"nächster Punkt"
 
 #: src/badweathermounttester/templates/index.html:898
 msgid "The selected point is shown in yellow. New points are auto-selected."
-msgstr "Der ausgewählte Punkt wird gelb angezeigt. Neue Punkte werden automatisch ausgewählt."
+msgstr ""
+"Der ausgewählte Punkt wird gelb angezeigt. Neue Punkte werden automatisch"
+" ausgewählt."
 
 #: src/badweathermounttester/templates/index.html:902
 msgid "Calibration Preview"
@@ -335,7 +401,9 @@ msgstr "Achse b:"
 
 #: src/badweathermounttester/templates/index.html:938
 msgid "Three vertical stripes are now displayed on the simulator screen."
-msgstr "Drei vertikale Streifen werden jetzt auf dem Simulatorbildschirm angezeigt."
+msgstr ""
+"Drei vertikale Streifen werden jetzt auf dem Simulatorbildschirm "
+"angezeigt."
 
 #: src/badweathermounttester/templates/index.html:939
 msgid "Select a stripe below (Left, Middle, or Right)."
@@ -343,28 +411,36 @@ msgstr "Wählen Sie unten einen Streifen aus (Links, Mitte oder Rechts)."
 
 #: src/badweathermounttester/templates/index.html:940
 msgid "Choose a very short exposure for the camera. At best avoid saturation."
-msgstr "Wählen Sie eine sehr kurze Belichtungszeit für die Kamera. Vermeiden Sie nach Möglichkeit Überbelichtung."
+msgstr ""
+"Wählen Sie eine sehr kurze Belichtungszeit für die Kamera. Vermeiden Sie "
+"nach Möglichkeit Überbelichtung."
 
 #: src/badweathermounttester/templates/index.html:941
-#: src/badweathermounttester/templates/index.html:1178
+#: src/badweathermounttester/templates/index.html:1195
 msgid ""
 "Move the mount until the star is about to enter the stripe and enable "
 "tracking in the mount."
 msgstr ""
-"Bewegen Sie die Montierung, bis der Stern kurz davor ist, in den Streifen "
-"einzutreten, und aktivieren Sie die Nachführung in der Montierung."
+"Bewegen Sie die Montierung, bis der Stern kurz davor ist, in den Streifen"
+" einzutreten, und aktivieren Sie die Nachführung in der Montierung."
 
 #: src/badweathermounttester/templates/index.html:942
 msgid "Press Start when the star enters the stripe, Stop when it exits."
-msgstr "Drücken Sie Start, wenn der Stern in den Streifen eintritt, Stop, wenn er ihn verlässt."
+msgstr ""
+"Drücken Sie Start, wenn der Stern in den Streifen eintritt, Stop, wenn er"
+" ihn verlässt."
 
 #: src/badweathermounttester/templates/index.html:943
 msgid "Record the time for each stripe to measure on screen velocity."
-msgstr "Notieren Sie die Zeit für jeden Streifen, um die Geschwindigkeit auf dem Bildschirm zu messen."
+msgstr ""
+"Notieren Sie die Zeit für jeden Streifen, um die Geschwindigkeit auf dem "
+"Bildschirm zu messen."
 
 #: src/badweathermounttester/templates/index.html:945
 msgid "This step verifies that the mount moves at the expected sidereal rate."
-msgstr "Dieser Schritt überprüft, ob sich die Montierung mit der erwarteten siderischen Rate bewegt."
+msgstr ""
+"Dieser Schritt überprüft, ob sich die Montierung mit der erwarteten "
+"siderischen Rate bewegt."
 
 #: src/badweathermounttester/templates/index.html:949
 msgid "Stopwatch"
@@ -397,6 +473,7 @@ msgstr "Linker Streifen"
 #: src/badweathermounttester/templates/index.html:973
 #: src/badweathermounttester/templates/index.html:979
 #: src/badweathermounttester/templates/index.html:985
+#: src/badweathermounttester/templates/index.html:1053
 msgid "Clear"
 msgstr "Löschen"
 
@@ -429,83 +506,119 @@ msgid "Max:"
 msgstr "Max:"
 
 #: src/badweathermounttester/templates/index.html:1005
-#: src/badweathermounttester/templates/index.html:1197
+#: src/badweathermounttester/templates/index.html:1214
 msgid "Move the mount back to the starting position (left side of screen)."
-msgstr "Bewegen Sie die Montierung zurück zur Startposition (linke Bildschirmseite)."
+msgstr ""
+"Bewegen Sie die Montierung zurück zur Startposition (linke "
+"Bildschirmseite)."
 
 #: src/badweathermounttester/templates/index.html:1006
 msgid "In PHD2, center the simulated star and start guiding."
-msgstr "Zentrieren Sie in PHD2 den simulierten Stern und starten Sie die Nachführung."
+msgstr ""
+"Zentrieren Sie in PHD2 den simulierten Stern und starten Sie die "
+"Nachführung."
 
 #: src/badweathermounttester/templates/index.html:1007
 msgid "Press \"Start Simulation\" below to begin the star movement."
-msgstr "Drücken Sie unten \"Simulation starten\", um die Sternbewegung zu beginnen."
+msgstr ""
+"Drücken Sie unten \"Simulation starten\", um die Sternbewegung zu "
+"beginnen."
 
 #: src/badweathermounttester/templates/index.html:1008
 msgid "Wait until the simulation completes (the star crosses the screen)."
-msgstr "Warten Sie, bis die Simulation abgeschlossen ist (der Stern den Bildschirm überquert)."
+msgstr ""
+"Warten Sie, bis die Simulation abgeschlossen ist (der Stern den "
+"Bildschirm überquert)."
 
 #: src/badweathermounttester/templates/index.html:1009
 msgid "Stop guiding in PHD2 and analyze the log with PHD2 Log Viewer."
-msgstr "Stoppen Sie die Nachführung in PHD2 und analysieren Sie das Protokoll mit dem PHD2 Log Viewer."
+msgstr ""
+"Stoppen Sie die Nachführung in PHD2 und analysieren Sie das Protokoll mit"
+" dem PHD2 Log Viewer."
 
 #: src/badweathermounttester/templates/index.html:1014
+msgid ""
+"Velocity not yet determined. Complete Step 4 (Velocity) for accurate "
+"simulation results. Using estimated velocity based on the sidereal rate."
+msgstr ""
+"Geschwindigkeit noch nicht gemessen. Führen Sie Schritt 4 "
+"(Geschwindigkeit) für genaue Simulationsergebnisse durch. Verwende "
+"geschätzte Geschwindigkeit basierend auf der Sideralrate."
+
+#: src/badweathermounttester/templates/index.html:1018
 msgid "Simulation Control"
 msgstr "Simulationssteuerung"
 
-#: src/badweathermounttester/templates/index.html:1018
+#: src/badweathermounttester/templates/index.html:1022
 msgid "Ready"
 msgstr "Bereit"
 
-#: src/badweathermounttester/templates/index.html:1021
+#: src/badweathermounttester/templates/index.html:1025
 msgid "Remaining:"
 msgstr "Verbleibend:"
 
-#: src/badweathermounttester/templates/index.html:1034
+#: src/badweathermounttester/templates/index.html:1038
 msgid "Elapsed:"
 msgstr "Vergangen:"
 
-#: src/badweathermounttester/templates/index.html:1034
+#: src/badweathermounttester/templates/index.html:1038
 msgid "Total:"
 msgstr "Gesamt:"
 
-#: src/badweathermounttester/templates/index.html:1036
+#: src/badweathermounttester/templates/index.html:1040
 msgid "Velocity:"
 msgstr "Geschwindigkeit:"
 
-#: src/badweathermounttester/templates/index.html:1042
+#: src/badweathermounttester/templates/index.html:1047
+msgid "Velocity Override (px/s):"
+msgstr "Manuelle Geschwindigkeit (px/s):"
+
+#: src/badweathermounttester/templates/index.html:1048
+msgid ""
+"Enter the simulation velocity in simulator pixels per second. This "
+"overrides the measured velocity. Use Apply to activate it."
+msgstr ""
+"Geben Sie die Simulationsgeschwindigkeit in Simulator-Pixeln pro Sekunde "
+"ein. Dies überschreibt die gemessene Geschwindigkeit. Klicken Sie auf "
+"Übernehmen, um es zu aktivieren."
+
+#: src/badweathermounttester/templates/index.html:1052
+msgid "Apply"
+msgstr "Übernehmen"
+
+#: src/badweathermounttester/templates/index.html:1059
 msgid "Reset to start"
 msgstr "Zum Anfang zurücksetzen"
 
-#: src/badweathermounttester/templates/index.html:1043
+#: src/badweathermounttester/templates/index.html:1060
 msgid "Skip back 10s"
 msgstr "10s zurückspringen"
 
-#: src/badweathermounttester/templates/index.html:1044
+#: src/badweathermounttester/templates/index.html:1061
 msgid "Play/Pause"
 msgstr "Abspielen/Pause"
 
-#: src/badweathermounttester/templates/index.html:1045
+#: src/badweathermounttester/templates/index.html:1062
 msgid "Skip forward 10s"
 msgstr "10s vorspringen"
 
-#: src/badweathermounttester/templates/index.html:1046
+#: src/badweathermounttester/templates/index.html:1063
 msgid "Stop"
 msgstr "Stopp"
 
-#: src/badweathermounttester/templates/index.html:1052
+#: src/badweathermounttester/templates/index.html:1069
 msgid "Back"
 msgstr "Zurück"
 
-#: src/badweathermounttester/templates/index.html:1053
+#: src/badweathermounttester/templates/index.html:1070
 msgid "Next"
 msgstr "Weiter"
 
-#: src/badweathermounttester/templates/index.html:1150
+#: src/badweathermounttester/templates/index.html:1167
 msgid "Southern Hemisphere"
 msgstr "Südhalbkugel"
 
-#: src/badweathermounttester/templates/index.html:1158
+#: src/badweathermounttester/templates/index.html:1175
 msgid ""
 "Using only rotations in RA, move the mount back and forth from right-"
 "hand-side to left-hand-side. Use the mount's Azimuth adjustment screws, "
@@ -515,7 +628,7 @@ msgstr ""
 "links. Verwenden Sie die Azimuteinstellschrauben der Montierung, sodass "
 "die Nulllinie auf der rechten und linken Seite überquert wird."
 
-#: src/badweathermounttester/templates/index.html:1177
+#: src/badweathermounttester/templates/index.html:1194
 msgid ""
 "Move the mount until the star is about to enter the stripe from the right"
 " and enable tracking in the mount."
@@ -524,87 +637,12 @@ msgstr ""
 "den Streifen einzutreten, und aktivieren Sie die Nachführung in der "
 "Montierung."
 
-#: src/badweathermounttester/templates/index.html:1196
+#: src/badweathermounttester/templates/index.html:1213
 msgid "Move the mount back to the starting position (right side of screen)."
-msgstr "Bewegen Sie die Montierung zurück zur Startposition (rechte Bildschirmseite)."
-
-#: src/badweathermounttester/templates/index.html
-msgid ""
-"Velocity not yet determined. Complete Step 4 (Velocity) for accurate "
-"simulation results. Using estimated velocity based on the sidereal rate."
 msgstr ""
-"Geschwindigkeit noch nicht gemessen. Führen Sie Schritt 4 (Geschwindigkeit) "
-"für genaue Simulationsergebnisse durch. Verwende geschätzte Geschwindigkeit "
-"basierend auf der Sideralrate."
+"Bewegen Sie die Montierung zurück zur Startposition (rechte "
+"Bildschirmseite)."
 
-#: src/badweathermounttester/display.py
-msgid "Press ESC to exit"
-msgstr "ESC drücken zum Beenden"
+#~ msgid "Connect to:"
+#~ msgstr "Verbinden mit:"
 
-#: src/badweathermounttester/display.py
-msgid "Connect to:"
-msgstr "Verbinden mit:"
-
-#: src/badweathermounttester/display.py
-msgid "Calibration - Points: %d"
-msgstr "Kalibrierung - Punkte: %d"
-
-#: src/badweathermounttester/display.py
-msgid "Move mouse on web UI to position crosshair, click to record point"
-msgstr "Maus im Web-UI bewegen zum Positionieren des Fadenkreuzes, klicken zum Aufzeichnen"
-
-#: src/badweathermounttester/display.py
-msgid "LEFT"
-msgstr "LINKS"
-
-#: src/badweathermounttester/display.py
-msgid "MIDDLE"
-msgstr "MITTE"
-
-#: src/badweathermounttester/display.py
-msgid "RIGHT"
-msgstr "RECHTS"
-
-#: src/badweathermounttester/display.py
-msgid "Simulation Complete"
-msgstr "Simulation abgeschlossen"
-
-#: src/badweathermounttester/display.py
-msgid "Running"
-msgstr "Läuft"
-
-#: src/badweathermounttester/display.py
-msgid "Simulation Ready - Press Start"
-msgstr "Simulation bereit - Start drücken"
-
-#: src/badweathermounttester/display.py
-msgid "Velocity not measured \u2014 using estimated rate"
-msgstr "Geschwindigkeit nicht gemessen \u2014 geschätzte Rate wird verwendet"
-
-#: src/badweathermounttester/display.py
-msgid "Velocity partially measured \u2014 using average"
-msgstr "Geschwindigkeit teilweise gemessen \u2014 Durchschnitt wird verwendet"
-
-#: src/badweathermounttester/templates/index.html
-msgid "RA Drift Rate (PHD2, guidecam px/min):"
-msgstr "RA-Driftrate (PHD2, Leitkam.-Px/min):"
-
-#: src/badweathermounttester/templates/index.html
-msgid ""
-"Enter the RA drift rate measured by PHD2 Log Viewer in guide camera pixels "
-"per minute. This is the residual star motion while the mount tracks; it is "
-"added to the base simulation velocity. Negative values mean drift opposite "
-"to the sidereal direction."
-msgstr ""
-"Geben Sie die von PHD2 Log Viewer gemessene RA-Driftrate in Leitkamerapixeln "
-"pro Minute ein. Dies ist die Restbewegung des Sterns während der Nachführung; "
-"sie wird zur Basissimulationsgeschwindigkeit addiert. Negative Werte bedeuten "
-"Drift entgegen der siderischen Richtung."
-
-#: src/badweathermounttester/templates/index.html
-msgid "Apply"
-msgstr "Übernehmen"
-
-#: src/badweathermounttester/templates/index.html
-msgid "Clear"
-msgstr "Löschen"
